--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,3 +1,5 @@
+Wireshark=-1
+Liferay=-1
 exploratory\ testing=-1
 cluster=1
 aspect\ oriented\ programming=1
@@ -10,8 +12,8 @@ hyphen\ ("-")\ function=1
 URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
 bounded\ context=1
 good\ cohesion\ for\ DocManager=1
 pipeline\ (IT)=1
@@ -20,13 +22,11 @@ DC=1
 ICT\ system\ (components)=1
 bounded\ context\ (example\ of\ order\ processing)=1
 MLM=1
-Kerberos=1
 DDoS\ attacks=1
 throughput=1
 good\ cohesion\ (DDD)=1
 factory\ pattern=1
 proprietary=1
-heap\ space=1
 GCT=1
 gateway=1
 Saba=1
@@ -35,7 +35,6 @@ dispatcher=1
 database\ transactions=1
 allocate=1
 Kibana=1
-exponent\ (math)=1
 onboarding=1
 JPA\ entity\ management\ (db)=1
 bounded\ context\ (example\ of\ inventory\ management)=1
@@ -47,7 +46,6 @@ NFC=1
 NFS=1
 DSL=1
 observability=1
-volatile\ (Java)=1
 namespace\ (networking)=1
 Spring\ boot=1
 DGOM=1
@@ -57,8 +55,8 @@ object\ mapping\ (database)=1
 heap=1
 collision\ resistant=1
 API=1
-vague=2
 connection\ pool\ (context\:\ database)=2
+vague=2
 tamper=2
 synchronous=2
 container\ image=2
@@ -282,6 +280,7 @@ DRY=3
 etcd\ etymology=3
 security\ testing=3
 YubiKey=3
+volatile\ (Java)=3
 streamline=3
 web\ server=3
 DevOps=3
@@ -367,6 +366,7 @@ pagination=5
 e.g.=5
 postmortem=5
 test\ pilot\ (IT)=5
+exponent\ (math)=5
 roll\ out=5
 DBA=5
 KPI=5
