--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,19 +1,9 @@
-Wireshark=-1
-Liferay=-1
-exploratory\ testing=-1
-cluster=1
-aspect\ oriented\ programming=1
-base\ (math)=1
+heap\ space=-1
 Rancher\ features=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
-domain\ model=1
 Argo\ CD=1
 hyphen\ ("-")\ function=1
 URL\ safe\ format=1
-full-text\ search=1
-diamond\ operator\ (Java)=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
 bounded\ context=1
 good\ cohesion\ for\ DocManager=1
 pipeline\ (IT)=1
@@ -25,13 +15,11 @@ MLM=1
 DDoS\ attacks=1
 throughput=1
 good\ cohesion\ (DDD)=1
-factory\ pattern=1
 proprietary=1
 GCT=1
 gateway=1
 Saba=1
 Kerberos\ keytab=1
-dispatcher=1
 database\ transactions=1
 allocate=1
 Kibana=1
@@ -45,18 +33,20 @@ Java\ EE=1
 NFC=1
 NFS=1
 DSL=1
-observability=1
 namespace\ (networking)=1
 Spring\ boot=1
 DGOM=1
-ubiquitous=1
 VPN\ whitelisting=1
 object\ mapping\ (database)=1
 heap=1
-collision\ resistant=1
 API=1
-connection\ pool\ (context\:\ database)=2
+Kerberos=1
+ubiquitous=2
+collision\ resistant=2
+dispatcher=2
+base\ (math)=2
 vague=2
+connection\ pool\ (context\:\ database)=2
 tamper=2
 synchronous=2
 container\ image=2
@@ -237,6 +227,13 @@ OKR=2
 on-premises\ datacenter=2
 modal\ window=2
 CTO=2
+aspect\ oriented\ programming=3
+container\ management\ platform=3
+diamond\ operator\ (Java)=3
+observability=3
+factory\ pattern=3
+cluster=3
+exploratory\ testing=3
 due\ diligence=3
 servlet=3
 CI\ (IT\ component)=3
@@ -354,6 +351,8 @@ product\ life\ cycle\ management=4
 SSH=4
 Chromium=4
 Kubernetes=4
+RESTful\ data\ formats=5
+full-text\ search=5
 PR=5
 metadata=5
 aspect=5
