--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,6 +1,6 @@
-heap\ space=-1
-Rancher\ features=1
-reason\ for\ memory\ lack\ in\ Jenkins=1
+heap\ (context\:\ data\ structure)=-1
+NFS\ (storage)=-1
+assess=-1
 hyphen\ ("-")\ function=1
 bounded\ context=1
 good\ cohesion\ for\ DocManager=1
@@ -8,23 +8,18 @@ ICT\ system\ (components)=1
 bounded\ context\ (example\ of\ order\ processing)=1
 MLM=1
 Kerberos=1
-DDoS\ attacks=1
-throughput=1
 good\ cohesion\ (DDD)=1
 proprietary=1
+heap\ space=1
 gateway=1
 Saba=1
-Kerberos\ keytab=1
-allocate=1
 JPA\ entity\ management\ (db)=1
 GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 pointcut=1
 NFC=1
-NFS=1
 DSL=1
 namespace\ (networking)=1
-DGOM=1
 VPN\ whitelisting=1
 object\ mapping\ (database)=1
 connection\ pool\ (context\:\ database)=2
@@ -36,6 +31,7 @@ container\ image=2
 usability\ testing=2
 functional\ testing=2
 F5\ rules=2
+domain\ model=2
 directed\ graph=2
 sticky\ session\ benefit=2
 AD=2
@@ -95,6 +91,7 @@ VPN=2
 OpenShift=2
 jar\ hell=2
 defensive\ programming=2
+Liferay=2
 subsetting\ data=2
 volatile=2
 hub=2
@@ -108,6 +105,7 @@ UI\ dialog=2
 overlay\ (web)=2
 DNS=2
 CDD\ (compliance)=2
+Kerberos\ keytab=2
 deque=2
 SLI=2
 credential=2
@@ -125,6 +123,7 @@ build\ process=2
 obfuscate\ data=2
 value\ stream=2
 Kerberos\ keytab\ key=2
+allocate=2
 integrity\ (of\ documents)=2
 web\ portal=2
 edge\ (graphs)=2
@@ -298,6 +297,7 @@ endpoint=4
 PPTE=4
 penetration\ testing=4
 WoW=4
+Wireshark=4
 mitigate=4
 SwiftUI=4
 EDD\ (compliance)=4
@@ -354,6 +354,7 @@ aspect=5
 separation\ of\ concerns\ (DDD)=5
 servlet/controller/MVC=5
 stub=5
+throughput=5
 PVC\ (containerisation)=5
 Google\ Cloud=5
 pagination=5
@@ -363,7 +364,6 @@ postmortem=5
 test\ pilot\ (IT)=5
 exponent\ (math)=5
 roll\ out=5
-DBA=5
 KPI=5
 DRT=5
 cloud=5
@@ -372,6 +372,7 @@ Genesys\ Cloud=5
 Spring\ boot=5
 CTE\ (SQL)=5
 API=5
+DBA=6
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
