--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,6 +1,5 @@
-heap\ (context\:\ data\ structure)=-1
-NFS\ (storage)=-1
-assess=-1
+DGOM=-1
+heap\ (context\:\ data\ structure)=1
 hyphen\ ("-")\ function=1
 bounded\ context=1
 good\ cohesion\ for\ DocManager=1
@@ -9,21 +8,19 @@ bounded\ context\ (example\ of\ order\ processing)=1
 MLM=1
 Kerberos=1
 good\ cohesion\ (DDD)=1
-proprietary=1
-heap\ space=1
 gateway=1
 Saba=1
 JPA\ entity\ management\ (db)=1
 GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 pointcut=1
-NFC=1
 DSL=1
 namespace\ (networking)=1
 VPN\ whitelisting=1
 object\ mapping\ (database)=1
-connection\ pool\ (context\:\ database)=2
+heap\ space=2
 vague=2
+connection\ pool\ (context\:\ database)=2
 tamper=2
 base\ (math)=2
 synchronous=2
@@ -215,6 +212,7 @@ OKR=2
 on-premises\ datacenter=2
 modal\ window=2
 CTO=2
+NFS\ (storage)=3
 cluster=3
 aspect\ oriented\ programming=3
 due\ diligence=3
@@ -345,6 +343,8 @@ product\ life\ cycle\ management=4
 SSH=4
 Chromium=4
 Kubernetes=4
+DDoS\ attacks=4
+proprietary=5
 PR=5
 metadata=5
 URL\ safe\ format=5
