--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,26 +1,19 @@
 DGOM=-1
 heap\ (context\:\ data\ structure)=1
 hyphen\ ("-")\ function=1
-bounded\ context=1
 good\ cohesion\ for\ DocManager=1
-ICT\ system\ (components)=1
-bounded\ context\ (example\ of\ order\ processing)=1
 MLM=1
-Kerberos=1
-good\ cohesion\ (DDD)=1
-gateway=1
-Saba=1
-JPA\ entity\ management\ (db)=1
-GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
-pointcut=1
+GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 DSL=1
 namespace\ (networking)=1
-VPN\ whitelisting=1
 object\ mapping\ (database)=1
-heap\ space=2
-vague=2
+assess=1
+bounded\ context\ (example\ of\ order\ processing)=2
+pointcut=2
+bounded\ context=2
 connection\ pool\ (context\:\ database)=2
+vague=2
 tamper=2
 base\ (math)=2
 synchronous=2
@@ -53,8 +46,8 @@ error\ budget=2
 assemble=2
 Helm\ chart=2
 good\ separation\ of\ concerns\ for\ DocManager=2
-integration\ testing=2
 RBAC=2
+integration\ testing=2
 worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
@@ -86,6 +79,7 @@ JSON=2
 Ivy=2
 VPN=2
 OpenShift=2
+heap\ space=2
 jar\ hell=2
 defensive\ programming=2
 Liferay=2
@@ -212,7 +206,8 @@ OKR=2
 on-premises\ datacenter=2
 modal\ window=2
 CTO=2
-NFS\ (storage)=3
+gateway=3
+JPA\ entity\ management\ (db)=3
 cluster=3
 aspect\ oriented\ programming=3
 due\ diligence=3
@@ -222,6 +217,7 @@ diligence=3
 AWS\ (cloud)=3
 dispose\ of\ memory=3
 pivot=3
+NFS\ (storage)=3
 Argo\ CD=3
 ICT\ system=3
 .war\ file=3
@@ -302,6 +298,7 @@ EDD\ (compliance)=4
 suite=4
 boilerplate=4
 technical\ debt=4
+DDoS\ attacks=4
 AFC\ (compliance)=4
 JWT=4
 bounded=4
@@ -343,8 +340,9 @@ product\ life\ cycle\ management=4
 SSH=4
 Chromium=4
 Kubernetes=4
-DDoS\ attacks=4
-proprietary=5
+ICT\ system\ (components)=5
+good\ cohesion\ (DDD)=5
+Kerberos=5
 PR=5
 metadata=5
 URL\ safe\ format=5
@@ -358,6 +356,7 @@ throughput=5
 PVC\ (containerisation)=5
 Google\ Cloud=5
 pagination=5
+proprietary=5
 e.g.=5
 database\ transactions=5
 postmortem=5
