master: started using individual instructions for concepts (if they are defined in the csv file)

--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,17 +1,8 @@
-DGOM=-1
 heap\ (context\:\ data\ structure)=1
-hyphen\ ("-")\ function=1
-good\ cohesion\ for\ DocManager=1
-MLM=1
-bounded\ context\ (example\ of\ inventory\ management)=1
-GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
+assess=1
 DSL=1
 namespace\ (networking)=1
-object\ mapping\ (database)=1
-assess=1
-bounded\ context\ (example\ of\ order\ processing)=2
-pointcut=2
-bounded\ context=2
+DGOM=1
 connection\ pool\ (context\:\ database)=2
 vague=2
 tamper=2
@@ -42,6 +33,7 @@ data\ custodian=2
 justified\ vs\ excusable=2
 staging\ environment=2
 real-time\ data\ flow=2
+bounded\ context=2
 error\ budget=2
 assemble=2
 Helm\ chart=2
@@ -53,10 +45,12 @@ bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 gateway\ team=2
 proxy\ pattern=2
+bounded\ context\ (example\ of\ order\ processing)=2
 JETTY=2
 container\ instance=2
 YAML=2
 distributed\ computing=2
+MLM=2
 web\ container=2
 sticky\ session=2
 intrusive=2
@@ -144,6 +138,7 @@ firewall=2
 API\ gateway=2
 CI/CD=2
 chaos\ engineering=2
+pointcut=2
 tampering=2
 Helm=2
 facility=2
@@ -183,6 +178,7 @@ RESTful\ methods=2
 Data\ governance=2
 Elasticsearch=2
 OpenShift\ vs\ Kubernetes?=2
+object\ mapping\ (database)=2
 NOT\ IN\ (SQL)=2
 provisioning=2
 detrimental=2
@@ -206,8 +202,6 @@ OKR=2
 on-premises\ datacenter=2
 modal\ window=2
 CTO=2
-gateway=3
-JPA\ entity\ management\ (db)=3
 cluster=3
 aspect\ oriented\ programming=3
 due\ diligence=3
@@ -219,6 +213,7 @@ dispose\ of\ memory=3
 pivot=3
 NFS\ (storage)=3
 Argo\ CD=3
+hyphen\ ("-")\ function=3
 ICT\ system=3
 .war\ file=3
 diamond\ operator\ (Java)=3
@@ -247,12 +242,14 @@ TLS=3
 signup\ raw\ data=3
 compatibility\ testing=3
 GCT=3
+gateway=3
 personal\ data\ retention=3
 exploratory\ testing=3
 Logread=3
 servlet\ container=3
 custody=3
 Kibana=3
+JPA\ entity\ management\ (db)=3
 ECB=3
 token=3
 PII=3
@@ -321,6 +318,7 @@ RDBMS=4
 PCI\ DSS=4
 DAO=4
 fetch=4
+NFC=4
 servlet\ vs\ controller=4
 POJO=4
 Azure=4
@@ -340,9 +338,6 @@ product\ life\ cycle\ management=4
 SSH=4
 Chromium=4
 Kubernetes=4
-ICT\ system\ (components)=5
-good\ cohesion\ (DDD)=5
-Kerberos=5
 PR=5
 metadata=5
 URL\ safe\ format=5
@@ -351,8 +346,12 @@ RESTful\ data\ formats=5
 aspect=5
 separation\ of\ concerns\ (DDD)=5
 servlet/controller/MVC=5
+good\ cohesion\ for\ DocManager=5
+ICT\ system\ (components)=5
+Kerberos=5
 stub=5
 throughput=5
+good\ cohesion\ (DDD)=5
 PVC\ (containerisation)=5
 Google\ Cloud=5
 pagination=5
@@ -371,9 +370,9 @@ Genesys\ Cloud=5
 Spring\ boot=5
 CTE\ (SQL)=5
 API=5
-DBA=6
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
+DBA=10
 em\ dash\ ("—")\ function=10
 en\ dash\ ("–")\ function=12
