master: printing to concole, concepts and learning

--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,10 +1,11 @@
+Saba=-1
+VPN\ whitelisting=-1
 heap\ (context\:\ data\ structure)=1
+bounded\ context\ (example\ of\ inventory\ management)=1
 assess=1
-DSL=1
-namespace\ (networking)=1
-DGOM=1
-connection\ pool\ (context\:\ database)=2
+DGOM=2
 vague=2
+connection\ pool\ (context\:\ database)=2
 tamper=2
 base\ (math)=2
 synchronous=2
@@ -373,6 +374,6 @@ API=5
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
-DBA=10
 em\ dash\ ("—")\ function=10
+DBA=10
 en\ dash\ ("–")\ function=12
