--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,8 +1,11 @@
-Saba=-1
-VPN\ whitelisting=-1
-heap\ (context\:\ data\ structure)=1
-bounded\ context\ (example\ of\ inventory\ management)=1
-assess=1
+Saba=1
+namespace\ (networking)=1
+Loki\ (observability)=1
+Elasticsearch=1
+SES\ (Smart-ID)=1
+heap\ (context\:\ data\ structure)=2
+bounded\ context\ (example\ of\ inventory\ management)=2
+assess=2
 connection\ pool\ (context\:\ database)=2
 vague=2
 tamper=2
@@ -24,7 +27,6 @@ domain=2
 Hungarian\ pollution=2
 pod=2
 deterministic=2
-SES\ (Smart-ID)=2
 customer\ data\ domain=2
 remediation=2
 credential\ examples=2
@@ -98,13 +100,11 @@ Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
 undirected\ graph=2
 dispatcher=2
-landing\ page=2
 RESTful=2
 code\ integration=2
 allocate\ a\ list=2
 PV\ (containerisation)=2
 Logstash=2
-build\ process=2
 obfuscate\ data=2
 value\ stream=2
 Kerberos\ keytab\ key=2
@@ -146,8 +146,6 @@ Java\ bean=2
 etcd=2
 Java\ EE=2
 Unix=2
-Loki\ (observability)=2
-canary\ deployment=2
 unit\ testing=2
 hashing=2
 test\ integration=2
@@ -177,7 +175,6 @@ ubiquitous=2
 semantic\ registration\ message=2
 RESTful\ methods=2
 Data\ governance=2
-Elasticsearch=2
 OpenShift\ vs\ Kubernetes?=2
 object\ mapping\ (database)=2
 NOT\ IN\ (SQL)=2
@@ -190,7 +187,6 @@ permutation=2
 interface\ in\ java=2
 abstraction=2
 using\ APIs=2
-arbitrary=2
 collision\ resistant=2
 SSO=2
 stereotype\ in\ Spring=2
@@ -198,11 +194,15 @@ Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
 REST=2
 due=2
-Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
 modal\ window=2
 CTO=2
+DSL=2
+whitelisting=2
+landing\ page=3
+arbitrary=3
+VPN\ whitelisting=3
 cluster=3
 aspect\ oriented\ programming=3
 due\ diligence=3
@@ -280,6 +280,7 @@ SSL=3
 means\ of\ defensive\ programming=3
 application\ server=3
 hash\ use\ cases=3
+Agile\ Test\ Quadrants=4
 stakeholder=4
 Docker=4
 JSP=4
@@ -371,6 +372,8 @@ Genesys\ Cloud=5
 Spring\ boot=5
 CTE\ (SQL)=5
 API=5
+canary\ deployment=6
+build\ process=6
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
