--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,11 +1,8 @@
-commissioning\ example\ sentence=1
-provisioning=1
+Ivy=1
 vague=2
-tamper=2
 base\ (math)=2
 synchronous=2
 heap\ (context\:\ data\ structure)=2
-container\ image=2
 usability\ testing=2
 functional\ testing=2
 domain\ model=2
@@ -38,7 +35,6 @@ whitelisting=2
 worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
-gateway\ team=2
 JETTY=2
 container\ instance=2
 YAML=2
@@ -50,7 +46,6 @@ intrusive=2
 package\ (software)=2
 to\ prompt=2
 connection\ protection\ (examples)=2
-VIP\ (OpenShift)=2
 Kerberos\ principal=2
 lazy\ initialization=2
 firewall\ opening=2
@@ -59,7 +54,6 @@ feature\ flag=2
 regression\ testing=2
 enterprise-level=2
 operations\ specialist=2
-Ivy=2
 VPN=2
 OpenShift=2
 heap\ space=2
@@ -76,7 +70,6 @@ overlay\ (web)=2
 DNS=2
 Saba=2
 CDD\ (compliance)=2
-deque=2
 SLI=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
@@ -87,7 +80,6 @@ code\ integration=2
 allocate\ a\ list=2
 PV\ (containerisation)=2
 Logstash=2
-obfuscate\ data=2
 value\ stream=2
 Kerberos\ keytab\ key=2
 allocate=2
@@ -98,7 +90,6 @@ data\ flow=2
 hash=2
 secret\ (Kubernetes)=2
 artifactory=2
-microservice=2
 ubiquitous\ language\ (DDD)=2
 Kafka=2
 operational\ risk=2
@@ -110,7 +101,6 @@ DC\ components=2
 semantic\ message=2
 RESTful\ client-server=2
 bounded\ context\ (example\ of\ inventory\ management)=2
-A/B\ testing=2
 abstraction\ examples=2
 commissioning=2
 verbose=2
@@ -153,12 +143,12 @@ semantic\ registration\ message=2
 Data\ governance=2
 OpenShift\ vs\ Kubernetes?=2
 object\ mapping\ (database)=2
+provisioning=2
 detrimental=2
 cross\ architecture=2
 namespace\ (cluster)=2
 interface\ in\ java=2
 abstraction=2
-using\ APIs=2
 collision\ resistant=2
 SSO=2
 Spring\ beans=2
@@ -169,6 +159,7 @@ OKR=2
 on-premises\ datacenter=2
 modal\ window=2
 CTO=2
+deque=2
 connection\ pool\ (context\:\ database)=3
 cluster=3
 aspect\ oriented\ programming=3
@@ -216,6 +207,7 @@ compatibility\ testing=3
 partition\ and\ sample=3
 GCT=3
 gateway=3
+commissioning\ example\ sentence=3
 personal\ data\ retention=3
 Kerberos\ keytab=3
 exploratory\ testing=3
@@ -224,6 +216,7 @@ Logread=3
 servlet\ container=3
 custody=3
 Kibana=3
+microservice=3
 JPA\ entity\ management\ (db)=3
 ECB=3
 token=3
@@ -260,6 +253,7 @@ SSL=3
 means\ of\ defensive\ programming=3
 application\ server=3
 hash\ use\ cases=3
+tamper=4
 stakeholder=4
 Docker=4
 AD=4
@@ -276,6 +270,7 @@ SwiftUI=4
 EDD\ (compliance)=4
 suite=4
 boilerplate=4
+gateway\ team=4
 technical\ debt=4
 bounded\ context\ (example\ of\ order\ processing)=4
 DDoS\ attacks=4
@@ -289,12 +284,14 @@ throttling=4
 deduce=4
 volatile=4
 git\ stash=4
+QES\ (context\:\ Smart-ID)=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
 abstract\ class=4
 non-semantic\ message=4
 credential=4
 SLO=4
+obfuscate\ data=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
 UAT=4
@@ -303,6 +300,7 @@ FDP=4
 RDBMS=4
 domain\ vs\ bounded\ context=4
 PCI\ DSS=4
+A/B\ testing=4
 DAO=4
 fetch=4
 NFC=4
@@ -325,9 +323,12 @@ outdegree=4
 CTE\ (sandbox)=4
 comply=4
 product\ life\ cycle\ management=4
+using\ APIs=4
 SSH=4
+SES\ (context\:\ Smart-ID)=4
 Agile\ Test\ Quadrants=4
 Chromium=4
+AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
 PR=5
 metadata=5
@@ -361,8 +362,10 @@ Genesys\ Cloud=5
 Spring\ boot=5
 CTE\ (SQL)=5
 API=5
+container\ image=6
 proxy\ pattern=6
 enhanced=6
+VIP\ (OpenShift)=6
 build\ process=6
 integrity\ (of\ documents)=6
 canary\ deployment=6
