--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,43 +1,35 @@
-Kerberos\ principal=1
-secret\ (Kubernetes)=1
-API\ gateway=1
-OKR=1
+synchronous=1
+heap\ (context\:\ data\ structure)=1
+domain\ model=1
+JSX=1
+RBAC=1
 vague=2
 base\ (math)=2
-synchronous=2
-heap\ (context\:\ data\ structure)=2
 functional\ testing=2
-domain\ model=2
 directed\ graph=2
 sticky\ session\ benefit=2
 bad\ separation\ of\ concerns\ (DDD)=2
 trie=2
-JSX=2
 domain=2
 Hungarian\ pollution=2
 pod=2
-deterministic=2
 customer\ data\ domain=2
 remediation=2
 credential\ examples=2
-data\ custodian=2
 justified\ vs\ excusable=2
 staging\ environment=2
 real-time\ data\ flow=2
-bounded\ context=2
 error\ budget=2
+bounded\ context=2
 good\ separation\ of\ concerns\ for\ DocManager=2
-RBAC=2
 whitelisting=2
 deploying=2
 JETTY=2
-container\ instance=2
 YAML=2
-distributed\ computing=2
+container\ instance=2
 MLM=2
-package\ (software)=2
-to\ prompt=2
 connection\ protection\ (examples)=2
+Kerberos\ principal=2
 lazy\ initialization=2
 firewall\ opening=2
 coupling\ (noun)\ (software)=2
@@ -45,8 +37,8 @@ feature\ flag=2
 regression\ testing=2
 enterprise-level=2
 operations\ specialist=2
+Ivy=2
 OpenShift=2
-heap\ space=2
 Liferay=2
 subsetting\ data=2
 hub=2
@@ -54,7 +46,6 @@ good\ separation\ of\ concerns\ (DDD)=2
 container=2
 JPA\ transaction\ (db)=2
 UI\ dialog=2
-DNS=2
 CDD\ (compliance)=2
 deque=2
 SLI=2
@@ -68,25 +59,19 @@ PV\ (containerisation)=2
 Logstash=2
 value\ stream=2
 Kerberos\ keytab\ key=2
-allocate=2
 web\ portal=2
 edge\ (graphs)=2
 hash=2
 ubiquitous\ language\ (DDD)=2
-Kafka=2
-operational\ risk=2
-web=2
 product\ backlog\ (agile)=2
-onboarding=2
 Rancher\ platform=2
-DC\ components=2
 RESTful\ client-server=2
 bounded\ context\ (example\ of\ inventory\ management)=2
 abstraction\ examples=2
 commissioning=2
 verbose=2
-assess=2
 firewall=2
+API\ gateway=2
 CI/CD=2
 tampering=2
 Java\ bean=2
@@ -95,11 +80,9 @@ Java\ EE=2
 Loki\ (observability)=2
 unit\ testing=2
 test\ integration=2
-to\ stash=2
 irreversible\ data\ transformation=2
 memoization=2
 Hibernate=2
-artifact\ (context\:\ compilation)=2
 Ingress\ Controller=2
 Jenkins=2
 traverse=2
@@ -107,24 +90,19 @@ collision=2
 namespace\ (networking)=2
 continuous\ integration\ components=2
 dispose=2
-cohesion=2
-IoC=2
 DGOM=2
 signup\ metadata=2
 OpenShift\ vs\ Kubernetes?=2
 object\ mapping\ (database)=2
 provisioning=2
-detrimental=2
 cross\ architecture=2
 namespace\ (cluster)=2
 abstraction=2
-collision\ resistant=2
 SSO=2
 Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
 REST=2
 on-premises\ datacenter=2
-modal\ window=2
 connection\ pool\ (context\:\ database)=3
 cluster=3
 aspect\ oriented\ programming=3
@@ -132,9 +110,9 @@ due\ diligence=3
 servlet=3
 CI\ (IT\ component)=3
 diligence=3
-F5\ rules=3
-AWS\ (cloud)=3
 dispose\ of\ memory=3
+AWS\ (cloud)=3
+F5\ rules=3
 pivot=3
 NFS\ (storage)=3
 Argo\ CD=3
@@ -153,9 +131,12 @@ cohesion\ (DDD)=3
 DPIA=3
 IMDG=3
 ELK=3
+distributed\ computing=3
 web\ container=3
 indegree=3
 bad\ cohesion\ (DDD)=3
+package\ (software)=3
+to\ prompt=3
 integrated\ test\ environment=3
 F5=3
 factory\ pattern=3
@@ -183,10 +164,14 @@ landing\ page=3
 Logread=3
 servlet\ container=3
 custody=3
+allocate=3
 stop\ word\ filtering=3
 data\ flow=3
+secret\ (Kubernetes)=3
 Kibana=3
 microservice=3
+operational\ risk=3
+web=3
 JPA\ entity\ management\ (db)=3
 semantic\ message=3
 ECB=3
@@ -210,6 +195,7 @@ web\ server=3
 container\ runtime=3
 DevOps=3
 retrieve=3
+cohesion=3
 HSM\ (device)=3
 JPQL=3
 performance\ testing=3
@@ -236,6 +222,7 @@ Docker=4
 AD=4
 JSP=4
 JPA\ (db)=4
+deterministic=4
 master\ node=4
 endpoint=4
 PPTE=4
@@ -281,22 +268,27 @@ obfuscate\ data=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
 artifactory=4
+Kafka=4
 UAT=4
 URL=4
 FDP=4
 RDBMS=4
+onboarding=4
 domain\ vs\ bounded\ context=4
 PCI\ DSS=4
 A/B\ testing=4
 DAO=4
+assess=4
 fetch=4
 pointcut=4
 NFC=4
+to\ stash=4
 servlet\ vs\ controller=4
 credibility=4
 state\ (of\ object)=4
 POJO=4
 Azure=4
+artifact\ (context\:\ compilation)=4
 DSS=4
 backlog=4
 infer=4
@@ -317,11 +309,13 @@ interface\ in\ java=4
 product\ life\ cycle\ management=4
 using\ APIs=4
 SSH=4
+collision\ resistant=4
 SES\ (context\:\ Smart-ID)=4
 due=4
 Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
+modal\ window=4
 Kubernetes=4
 PR=5
 metadata=5
@@ -354,21 +348,28 @@ cloud=5
 runtime=5
 Genesys\ Cloud=5
 Spring\ boot=5
+OKR=5
 CTE\ (SQL)=5
 API=5
 container\ image=6
+data\ custodian=6
 bounded\ context\ (example\ of\ user\ management)=6
 proxy\ pattern=6
 enhanced=6
 VIP\ (OpenShift)=6
+heap\ space=6
+DNS=6
 Saba=6
 undirected\ graph=6
 build\ process=6
 integrity\ (of\ documents)=6
+DC\ components=6
 chaos\ engineering=6
 canary\ deployment=6
 cohesion\ example=6
 DSL=6
+IoC=6
+detrimental=6
 TDM=6
 permutation=6
 stereotype\ in\ Spring=6
