--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,7 +1,7 @@
 trie=1
-Logstash=1
-REST=1
 Kerberos\ principal=1
+Logstash=1
+namespace\ (cluster)=1
 vague=2
 base\ (math)=2
 synchronous=2
@@ -12,10 +12,9 @@ domain=2
 Hungarian\ pollution=2
 pod=2
 remediation=2
-justified\ vs\ excusable=2
 real-time\ data\ flow=2
-bounded\ context=2
 error\ budget=2
+bounded\ context=2
 whitelisting=2
 deploying=2
 JETTY=2
@@ -30,7 +29,6 @@ regression\ testing=2
 enterprise-level=2
 Ivy=2
 Liferay=2
-subsetting\ data=2
 good\ separation\ of\ concerns\ (DDD)=2
 container=2
 UI\ dialog=2
@@ -49,13 +47,11 @@ product\ backlog\ (agile)=2
 Rancher\ platform=2
 RESTful\ client-server=2
 bounded\ context\ (example\ of\ inventory\ management)=2
-abstraction\ examples=2
 verbose=2
 firewall=2
 API\ gateway=2
 CI/CD=2
 tampering=2
-Java\ bean=2
 etcd=2
 Java\ EE=2
 Loki\ (observability)=2
@@ -71,10 +67,7 @@ OpenShift\ vs\ Kubernetes?=2
 object\ mapping\ (database)=2
 provisioning=2
 cross\ architecture=2
-namespace\ (cluster)=2
 Spring\ beans=2
-on-premises\ datacenter=2
-feature\ flag=3
 connection\ pool\ (context\:\ database)=3
 cluster=3
 aspect\ oriented\ programming=3
@@ -121,6 +114,7 @@ port=3
 entity\ (database)=3
 XSS=3
 component\ scanning=3
+feature\ flag=3
 parity=3
 ORM=3
 garbage\ collection=3
@@ -162,6 +156,7 @@ framework=3
 DevSecOps=3
 Helm=3
 facility=3
+Java\ bean=3
 Unix=3
 subnet=3
 hashing=3
@@ -199,23 +194,22 @@ means\ of\ defensive\ programming=3
 application\ server=3
 hash\ use\ cases=3
 CTO=3
-credential\ examples=4
-collision=4
-staging\ environment=4
-sticky\ session\ benefit=4
 tamper=4
 stakeholder=4
 Docker=4
+sticky\ session\ benefit=4
 AD=4
 JSP=4
 JPA\ (db)=4
 deterministic=4
 master\ node=4
 endpoint=4
+credential\ examples=4
 PPTE=4
 penetration\ testing=4
 WoW=4
 Wireshark=4
+staging\ environment=4
 mitigate=4
 SwiftUI=4
 assemble=4
@@ -268,6 +262,7 @@ onboarding=4
 domain\ vs\ bounded\ context=4
 PCI\ DSS=4
 A/B\ testing=4
+abstraction\ examples=4
 commissioning=4
 DAO=4
 assess=4
@@ -283,6 +278,7 @@ POJO=4
 Azure=4
 artifact\ (context\:\ compilation)=4
 DSS=4
+collision=4
 backlog=4
 infer=4
 facilitate\ meeting=4
@@ -307,6 +303,7 @@ SSH=4
 collision\ resistant=4
 SES\ (context\:\ Smart-ID)=4
 SSO=4
+conduct=4
 due=4
 Agile\ Test\ Quadrants=4
 Chromium=4
@@ -349,6 +346,7 @@ CTE\ (SQL)=5
 API=5
 container\ image=6
 data\ custodian=6
+justified\ vs\ excusable=6
 good\ separation\ of\ concerns\ for\ DocManager=6
 bounded\ context\ (example\ of\ user\ management)=6
 proxy\ pattern=6
@@ -356,6 +354,7 @@ enhanced=6
 VIP\ (OpenShift)=6
 operations\ specialist=6
 heap\ space=6
+subsetting\ data=6
 DNS=6
 Saba=6
 undirected\ graph=6
@@ -371,6 +370,7 @@ detrimental=6
 TDM=6
 permutation=6
 stereotype\ in\ Spring=6
+on-premises\ datacenter=6
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
