--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,7 +1,4 @@
-trie=1
-Kerberos\ principal=1
-Logstash=1
-namespace\ (cluster)=1
+DGOM=1
 vague=2
 base\ (math)=2
 synchronous=2
@@ -18,15 +15,14 @@ bounded\ context=2
 whitelisting=2
 deploying=2
 JETTY=2
-container\ instance=2
 YAML=2
+container\ instance=2
 MLM=2
 connection\ protection\ (examples)=2
-lazy\ initialization=2
 firewall\ opening=2
 coupling\ (noun)\ (software)=2
-regression\ testing=2
 enterprise-level=2
+regression\ testing=2
 Ivy=2
 Liferay=2
 good\ separation\ of\ concerns\ (DDD)=2
@@ -37,7 +33,6 @@ deque=2
 SLI=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
-RESTful=2
 allocate\ a\ list=2
 PV\ (containerisation)=2
 value\ stream=2
@@ -62,7 +57,6 @@ Jenkins=2
 traverse=2
 namespace\ (networking)=2
 dispose=2
-DGOM=2
 OpenShift\ vs\ Kubernetes?=2
 object\ mapping\ (database)=2
 provisioning=2
@@ -70,15 +64,15 @@ cross\ architecture=2
 Spring\ beans=2
 connection\ pool\ (context\:\ database)=3
 cluster=3
-aspect\ oriented\ programming=3
 due\ diligence=3
+aspect\ oriented\ programming=3
 servlet=3
 CI\ (IT\ component)=3
 heap\ (context\:\ data\ structure)=3
 diligence=3
-F5\ rules=3
-AWS\ (cloud)=3
 dispose\ of\ memory=3
+AWS\ (cloud)=3
+F5\ rules=3
 domain\ model=3
 pivot=3
 bad\ separation\ of\ concerns\ (DDD)=3
@@ -108,10 +102,11 @@ bad\ cohesion\ (DDD)=3
 package\ (software)=3
 to\ prompt=3
 integrated\ test\ environment=3
-F5=3
 factory\ pattern=3
+F5=3
 port=3
 entity\ (database)=3
+Kerberos\ principal=3
 XSS=3
 component\ scanning=3
 feature\ flag=3
@@ -119,8 +114,8 @@ parity=3
 ORM=3
 garbage\ collection=3
 Ivy\ integration\ to\ Gradle=3
-defensive\ programming=3
 JDBC=3
+defensive\ programming=3
 TLS=3
 signup\ raw\ data=3
 compatibility\ testing=3
@@ -186,6 +181,7 @@ VPN\ whitelisting=3
 asynchronous=3
 NOT\ IN\ (SQL)=3
 DORA=3
+namespace\ (cluster)=3
 ECB\ stress\ test=3
 Hazelcast=3
 arbitrary=3
@@ -303,6 +299,7 @@ SSH=4
 collision\ resistant=4
 SES\ (context\:\ Smart-ID)=4
 SSO=4
+REST=4
 conduct=4
 due=4
 Agile\ Test\ Quadrants=4
@@ -312,7 +309,6 @@ modal\ window=4
 Kubernetes=4
 PR=5
 metadata=5
-RESTful\ layers=5
 URL\ safe\ format=5
 full-text\ search=5
 RESTful\ data\ formats=5
@@ -352,6 +348,7 @@ bounded\ context\ (example\ of\ user\ management)=6
 proxy\ pattern=6
 enhanced=6
 VIP\ (OpenShift)=6
+lazy\ initialization=6
 operations\ specialist=6
 heap\ space=6
 subsetting\ data=6
@@ -371,9 +368,11 @@ TDM=6
 permutation=6
 stereotype\ in\ Spring=6
 on-premises\ datacenter=6
+RESTful\ layers=7
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
 em\ dash\ ("—")\ function=10
 DBA=10
 en\ dash\ ("–")\ function=12
+RESTful=13
