master: cleanup notes

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,17 +1,10 @@
 problems:
   pick nth fragment 2 - should only print keys, not the values
-  extra instructions for
-  
-Please explain this: namespace (cluster)
-  
-  separate unit of instance containers
-Rating: 8/10. The definition "separate unit of instance containers" somewhat touches the essence of "namespace (cluster)" by implying separation but doesn't highlight resource division among projects or teams. Better definition example: "Logical partitioning of cluster resources to isolate workloads."
-
-The default definition: divides cluster resources (pods, services, deployments) among projects or teams.
-
-extra instructions should be printed before the answer is given
 
 ideas:
+  - there could be extra note for key for the user before the answer
+    - it should tell what is expected to be mentioned in the answer
+      - this should basicly directly respond to the extra instructions given for this key
   - spaced repetition?
   - should score 0 be explicit?
   - additional instruction specific to a single concept
