master: 'pick nth' command now prints keys only (to nots spoil the answer)

--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,72 +1,58 @@
-DGOM=1
-API\ gateway=1
-vague=2
+trie=-1
+Logstash=-1
+CDD\ (compliance)=1
+product\ backlog\ (agile)=1
 functional\ testing=2
 directed\ graph=2
 JSX=2
 domain=2
 Hungarian\ pollution=2
 remediation=2
-real-time\ data\ flow=2
 bounded\ context=2
-whitelisting=2
 deploying=2
 JETTY=2
-container\ instance=2
 YAML=2
+container\ instance=2
 connection\ protection\ (examples)=2
 firewall\ opening=2
 coupling\ (noun)\ (software)=2
 regression\ testing=2
-enterprise-level=2
-Ivy=2
 Liferay=2
 good\ separation\ of\ concerns\ (DDD)=2
 container=2
 UI\ dialog=2
-CDD\ (compliance)=2
 deque=2
 SLI=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
 PV\ (containerisation)=2
 value\ stream=2
-web\ portal=2
-product\ backlog\ (agile)=2
-Rancher\ platform=2
 RESTful\ client-server=2
 verbose=2
 firewall=2
 CI/CD=2
 tampering=2
 etcd=2
-Java\ EE=2
 Loki\ (observability)=2
 unit\ testing=2
 irreversible\ data\ transformation=2
 Hibernate=2
 Jenkins=2
-traverse=2
-namespace\ (networking)=2
 dispose=2
-OpenShift\ vs\ Kubernetes?=2
 provisioning=2
 cross\ architecture=2
-Spring\ beans=2
-object\ mapping\ (database)=3
-ubiquitous\ language\ (DDD)=3
-error\ budget=3
+vague=3
 connection\ pool\ (context\:\ database)=3
 cluster=3
-aspect\ oriented\ programming=3
 due\ diligence=3
+aspect\ oriented\ programming=3
 servlet=3
 CI\ (IT\ component)=3
 heap\ (context\:\ data\ structure)=3
 diligence=3
-F5\ rules=3
-AWS\ (cloud)=3
 dispose\ of\ memory=3
+AWS\ (cloud)=3
+F5\ rules=3
 domain\ model=3
 pivot=3
 bad\ separation\ of\ concerns\ (DDD)=3
@@ -79,8 +65,11 @@ diamond\ operator\ (Java)=3
 customer\ data\ domain=3
 Swagger=3
 container\ management\ platform=3
+real-time\ data\ flow=3
+error\ budget=3
 cloud\ platform=3
 RBAC=3
+whitelisting=3
 worker\ node=3
 pipeline\ (IT)=3
 DC=3
@@ -96,8 +85,8 @@ bad\ cohesion\ (DDD)=3
 package\ (software)=3
 to\ prompt=3
 integrated\ test\ environment=3
-F5=3
 factory\ pattern=3
+F5=3
 port=3
 entity\ (database)=3
 Kerberos\ principal=3
@@ -108,8 +97,8 @@ parity=3
 ORM=3
 garbage\ collection=3
 Ivy\ integration\ to\ Gradle=3
-defensive\ programming=3
 JDBC=3
+defensive\ programming=3
 TLS=3
 signup\ raw\ data=3
 compatibility\ testing=3
@@ -128,12 +117,14 @@ code\ integration=3
 custody=3
 Kerberos\ keytab\ key=3
 allocate=3
+web\ portal=3
 stop\ word\ filtering=3
 data\ flow=3
 hash=3
 secret\ (Kubernetes)=3
 Kibana=3
 microservice=3
+ubiquitous\ language\ (DDD)=3
 operational\ risk=3
 web=3
 JPA\ entity\ management\ (db)=3
@@ -160,6 +151,7 @@ Ingress\ Controller=3
 web\ server=3
 container\ runtime=3
 DevOps=3
+namespace\ (networking)=3
 continuous\ integration\ components=3
 retrieve=3
 cohesion=3
@@ -172,6 +164,8 @@ JPA\ responsibilities\ (db)=3
 TDC=3
 Elasticsearch=3
 VPN\ whitelisting=3
+OpenShift\ vs\ Kubernetes?=3
+object\ mapping\ (database)=3
 asynchronous=3
 NOT\ IN\ (SQL)=3
 DORA=3
@@ -180,20 +174,21 @@ ECB\ stress\ test=3
 Hazelcast=3
 arbitrary=3
 SSL=3
+Spring\ beans=3
 means\ of\ defensive\ programming=3
 application\ server=3
 hash\ use\ cases=3
 CTO=3
-pod=4
-synchronous=4
-base\ (math)=4
 tamper=4
+base\ (math)=4
+synchronous=4
 stakeholder=4
 Docker=4
 sticky\ session\ benefit=4
 AD=4
 JSP=4
 JPA\ (db)=4
+pod=4
 deterministic=4
 master\ node=4
 endpoint=4
@@ -220,8 +215,10 @@ AFC\ (compliance)=4
 intrusive=4
 JWT=4
 bounded=4
+enterprise-level=4
 Kerberos\ ticket=4
 JSON=4
+Ivy=4
 dispose\ of\ a\ list=4
 throttling=4
 VPN=4
@@ -261,6 +258,7 @@ DAO=4
 assess=4
 fetch=4
 pointcut=4
+Java\ EE=4
 NFC=4
 to\ stash=4
 servlet\ vs\ controller=4
@@ -271,6 +269,7 @@ POJO=4
 Azure=4
 artifact\ (context\:\ compilation)=4
 DSS=4
+traverse=4
 collision=4
 backlog=4
 infer=4
@@ -328,6 +327,7 @@ postmortem=5
 test\ pilot\ (IT)=5
 exponent\ (math)=5
 roll\ out=5
+API\ gateway=5
 KPI=5
 DRT=5
 cloud=5
@@ -337,15 +337,13 @@ Spring\ boot=5
 OKR=5
 CTE\ (SQL)=5
 API=5
-bounded\ context\ (example\ of\ inventory\ management)=6
-MLM=6
-allocate\ a\ list=6
 container\ image=6
 data\ custodian=6
 justified\ vs\ excusable=6
 good\ separation\ of\ concerns\ for\ DocManager=6
 bounded\ context\ (example\ of\ user\ management)=6
 proxy\ pattern=6
+MLM=6
 enhanced=6
 VIP\ (OpenShift)=6
 lazy\ initialization=6
@@ -355,9 +353,12 @@ subsetting\ data=6
 DNS=6
 Saba=6
 undirected\ graph=6
+allocate\ a\ list=6
 build\ process=6
 integrity\ (of\ documents)=6
+Rancher\ platform=6
 DC\ components=6
+bounded\ context\ (example\ of\ inventory\ management)=6
 chaos\ engineering=6
 canary\ deployment=6
 cohesion\ example=6
