--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,13 +1,10 @@
-trie=-1
-Logstash=-1
-CDD\ (compliance)=1
-product\ backlog\ (agile)=1
+remediation=1
+PV\ (containerisation)=1
 functional\ testing=2
 directed\ graph=2
 JSX=2
 domain=2
 Hungarian\ pollution=2
-remediation=2
 JETTY=2
 YAML=2
 container\ instance=2
@@ -22,18 +19,16 @@ deque=2
 SLI=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
-PV\ (containerisation)=2
 value\ stream=2
-RESTful\ client-server=2
+product\ backlog\ (agile)=2
 verbose=2
 firewall=2
 CI/CD=2
 etcd=2
 unit\ testing=2
-Hibernate=2
-dispose=2
+DGOM=2
 cross\ architecture=2
-Loki\ (observability)=3
+Hibernate=3
 vague=3
 connection\ pool\ (context\:\ database)=3
 cluster=3
@@ -49,6 +44,7 @@ F5\ rules=3
 domain\ model=3
 pivot=3
 bad\ separation\ of\ concerns\ (DDD)=3
+trie=3
 NFS\ (storage)=3
 Argo\ CD=3
 hyphen\ ("-")\ function=3
@@ -100,6 +96,7 @@ partition\ and\ sample=3
 GCT=3
 gateway=3
 commissioning\ example\ sentence=3
+CDD\ (compliance)=3
 personal\ data\ retention=3
 Kerberos\ keytab=3
 exploratory\ testing=3
@@ -132,6 +129,7 @@ facility=3
 Java\ bean=3
 Unix=3
 subnet=3
+Loki\ (observability)=3
 hashing=3
 DRY=3
 etcd\ etymology=3
@@ -172,7 +170,6 @@ means\ of\ defensive\ programming=3
 application\ server=3
 hash\ use\ cases=3
 CTO=3
-UI\ dialog=4
 tamper=4
 base\ (math)=4
 synchronous=4
@@ -223,6 +220,7 @@ volatile=4
 git\ stash=4
 encapsulation=4
 JPA\ transaction\ (db)=4
+UI\ dialog=4
 overlay\ (web)=4
 QES\ (context\:\ Smart-ID)=4
 present()\ (Fluentlenium)=4
@@ -331,16 +329,13 @@ Spring\ boot=5
 OKR=5
 CTE\ (SQL)=5
 API=5
-bounded\ context=6
-irreversible\ data\ transformation=6
-tampering=6
-deploying=6
-Jenkins=6
-provisioning=6
+dispose=6
 container\ image=6
 data\ custodian=6
 justified\ vs\ excusable=6
+bounded\ context=6
 good\ separation\ of\ concerns\ for\ DocManager=6
+deploying=6
 bounded\ context\ (example\ of\ user\ management)=6
 proxy\ pattern=6
 MLM=6
@@ -360,10 +355,14 @@ Rancher\ platform=6
 DC\ components=6
 bounded\ context\ (example\ of\ inventory\ management)=6
 chaos\ engineering=6
+tampering=6
 canary\ deployment=6
+irreversible\ data\ transformation=6
 cohesion\ example=6
 DSL=6
+Jenkins=6
 IoC=6
+provisioning=6
 detrimental=6
 TDM=6
 permutation=6
