--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,13 +1,13 @@
-remediation=1
-PV\ (containerisation)=1
+Logstash=1
+remediation=2
 functional\ testing=2
 directed\ graph=2
 JSX=2
 domain=2
 Hungarian\ pollution=2
 JETTY=2
-YAML=2
 container\ instance=2
+YAML=2
 connection\ protection\ (examples)=2
 firewall\ opening=2
 coupling\ (noun)\ (software)=2
@@ -19,28 +19,29 @@ deque=2
 SLI=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
-value\ stream=2
-product\ backlog\ (agile)=2
 verbose=2
-firewall=2
 CI/CD=2
-etcd=2
 unit\ testing=2
 DGOM=2
 cross\ architecture=2
-Hibernate=3
-vague=3
+latency=2
+bandwidth=2
+constraint\ (general\ word)=2
+etcd=3
+firewall=3
+value\ stream=3
 connection\ pool\ (context\:\ database)=3
+vague=3
 cluster=3
-due\ diligence=3
 aspect\ oriented\ programming=3
+due\ diligence=3
 servlet=3
 CI\ (IT\ component)=3
 heap\ (context\:\ data\ structure)=3
 diligence=3
-dispose\ of\ memory=3
-AWS\ (cloud)=3
 F5\ rules=3
+AWS\ (cloud)=3
+dispose\ of\ memory=3
 domain\ model=3
 pivot=3
 bad\ separation\ of\ concerns\ (DDD)=3
@@ -58,8 +59,8 @@ real-time\ data\ flow=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-whitelisting=3
 worker\ node=3
+whitelisting=3
 pipeline\ (IT)=3
 DC=3
 base\ Java\ Docker\ image=3
@@ -74,8 +75,8 @@ bad\ cohesion\ (DDD)=3
 package\ (software)=3
 to\ prompt=3
 integrated\ test\ environment=3
-factory\ pattern=3
 F5=3
+factory\ pattern=3
 port=3
 entity\ (database)=3
 Kerberos\ principal=3
@@ -86,8 +87,8 @@ parity=3
 ORM=3
 garbage\ collection=3
 Ivy\ integration\ to\ Gradle=3
-JDBC=3
 defensive\ programming=3
+JDBC=3
 TLS=3
 signup\ raw\ data=3
 compatibility\ testing=3
@@ -138,6 +139,7 @@ YubiKey=3
 observability=3
 volatile\ (Java)=3
 streamline=3
+Hibernate=3
 Ingress\ Controller=3
 web\ server=3
 container\ runtime=3
@@ -170,6 +172,7 @@ means\ of\ defensive\ programming=3
 application\ server=3
 hash\ use\ cases=3
 CTO=3
+product\ backlog\ (agile)=4
 tamper=4
 base\ (math)=4
 synchronous=4
@@ -295,6 +298,11 @@ Chromium=4
 AES\ (context\:\ Smart-ID)=4
 modal\ window=4
 Kubernetes=4
+downlink\ (networking)=4
+jitter=4
+uplink\ (networking)=4
+REST\ client-server\ constraint=4
+PV\ (containerisation)=5
 PR=5
 metadata=5
 URL\ safe\ format=5
@@ -329,7 +337,6 @@ Spring\ boot=5
 OKR=5
 CTE\ (SQL)=5
 API=5
-dispose=6
 container\ image=6
 data\ custodian=6
 justified\ vs\ excusable=6
@@ -361,6 +368,7 @@ irreversible\ data\ transformation=6
 cohesion\ example=6
 DSL=6
 Jenkins=6
+dispose=6
 IoC=6
 provisioning=6
 detrimental=6
