--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,14 +1,7 @@
-good\ separation\ of\ concerns\ (DDD)=2
-SLI=2
-unit\ testing=2
-Hungarian\ pollution=2
-container=2
-Kafka\ vs\ Kubernetes=2
-constraint\ (general\ word)=2
 regression\ testing=2
-container\ instance=3
-coupling\ (noun)\ (software)=3
-firewall\ opening=3
+Kafka\ vs\ Kubernetes=2
+Hungarian\ pollution=3
+unit\ testing=3
 vague=3
 aspect\ oriented\ programming=3
 servlet=3
@@ -28,12 +21,14 @@ DC=3
 base\ Java\ Docker\ image=3
 IMDG=3
 ELK=3
+container\ instance=3
 package\ (software)=3
 F5=3
 port=3
 entity\ (database)=3
 XSS=3
 component\ scanning=3
+coupling\ (noun)\ (software)=3
 parity=3
 TLS=3
 signup\ raw\ data=3
@@ -42,8 +37,8 @@ partition\ and\ sample=3
 Kerberos\ keytab=3
 exploratory\ testing=3
 data\ pseudonymization=3
-landing\ page=3
 Logread=3
+landing\ page=3
 code\ integration=3
 custody=3
 value\ stream=3
@@ -96,13 +91,13 @@ Argo\ CD=3
 hyphen\ ("-")\ function=3
 ICT\ system=3
 diamond\ operator\ (Java)=3
-Swagger=3
 container\ management\ platform=3
+Swagger=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-whitelisting=3
 worker\ node=3
+whitelisting=3
 pipeline\ (IT)=3
 cohesion\ (DDD)=3
 DPIA=3
@@ -116,6 +111,7 @@ integrated\ test\ environment=3
 connection\ protection\ (examples)=3
 factory\ pattern=3
 Kerberos\ principal=3
+firewall\ opening=3
 feature\ flag=3
 ORM=3
 garbage\ collection=3
@@ -154,15 +150,16 @@ HSM\ (device)=3
 JPA\ responsibilities\ (db)=3
 TDC=3
 VPN\ whitelisting=3
-object\ mapping\ (database)=3
 asynchronous=3
+object\ mapping\ (database)=3
 DORA=3
 namespace\ (cluster)=3
 arbitrary=3
 hash\ use\ cases=3
-cross\ architecture=4
-YAML=4
-bandwidth=4
+container=4
+SLI=4
+constraint\ (general\ word)=4
+good\ separation\ of\ concerns\ (DDD)=4
 uplink\ (networking)=4
 Docker=4
 AD=4
@@ -194,8 +191,8 @@ JSON=4
 Ivy=4
 dispose\ of\ a\ list=4
 VPN=4
-jar\ hell=4
 deduce=4
+jar\ hell=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
 abstract\ class=4
@@ -228,6 +225,7 @@ PI\ planning=4
 Data\ governance=4
 pseudonym=4
 Bean\ factory/\ Application\ context=4
+cross\ architecture=4
 CTE\ (sandbox)=4
 product\ life\ cycle\ management=4
 abstraction=4
@@ -251,8 +249,10 @@ endpoint=4
 credential\ examples=4
 Wireshark=4
 staging\ environment=4
+bandwidth=4
 gateway\ team=4
 technical\ debt=4
+YAML=4
 REST\ client-server\ constraint=4
 bounded=4
 throttling=4
@@ -297,6 +297,7 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
+polymorphism\ (OOP)=4
 URL\ safe\ format=5
 full-text\ search=5
 RESTful\ data\ formats=5
@@ -333,7 +334,6 @@ KPI=5
 cloud=5
 runtime=5
 Genesys\ Cloud=5
-CI/CD=6
 container\ image=6
 bounded\ context=6
 good\ separation\ of\ concerns\ for\ DocManager=6
@@ -349,6 +349,7 @@ Rancher\ platform=6
 DC\ components=6
 bounded\ context\ (example\ of\ inventory\ management)=6
 verbose=6
+CI/CD=6
 cohesion\ example=6
 DSL=6
 Jenkins=6
