--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,7 +1,4 @@
-regression\ testing=2
-Kafka\ vs\ Kubernetes=2
-Hungarian\ pollution=3
-unit\ testing=3
+application\ server=2
 vague=3
 aspect\ oriented\ programming=3
 servlet=3
@@ -37,9 +34,8 @@ partition\ and\ sample=3
 Kerberos\ keytab=3
 exploratory\ testing=3
 data\ pseudonymization=3
-Logread=3
 landing\ page=3
-code\ integration=3
+Logread=3
 custody=3
 value\ stream=3
 web\ portal=3
@@ -55,6 +51,7 @@ framework=3
 etcd=3
 Unix=3
 subnet=3
+unit\ testing=3
 hashing=3
 DRY=3
 observability=3
@@ -78,7 +75,6 @@ Hazelcast=3
 SSL=3
 Spring\ beans=3
 means\ of\ defensive\ programming=3
-application\ server=3
 CTO=3
 connection\ pool\ (context\:\ database)=3
 cluster=3
@@ -90,16 +86,16 @@ NFS\ (storage)=3
 Argo\ CD=3
 hyphen\ ("-")\ function=3
 ICT\ system=3
+Hungarian\ pollution=3
 diamond\ operator\ (Java)=3
-container\ management\ platform=3
 Swagger=3
+container\ management\ platform=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-worker\ node=3
 whitelisting=3
+worker\ node=3
 pipeline\ (IT)=3
-cohesion\ (DDD)=3
 DPIA=3
 JETTY=3
 distributed\ computing=3
@@ -150,16 +146,14 @@ HSM\ (device)=3
 JPA\ responsibilities\ (db)=3
 TDC=3
 VPN\ whitelisting=3
-asynchronous=3
 object\ mapping\ (database)=3
+asynchronous=3
 DORA=3
-namespace\ (cluster)=3
 arbitrary=3
 hash\ use\ cases=3
-container=4
-SLI=4
-constraint\ (general\ word)=4
-good\ separation\ of\ concerns\ (DDD)=4
+namespace\ (cluster)=4
+cohesion\ (DDD)=4
+regression\ testing=4
 uplink\ (networking)=4
 Docker=4
 AD=4
@@ -191,11 +185,13 @@ JSON=4
 Ivy=4
 dispose\ of\ a\ list=4
 VPN=4
-deduce=4
 jar\ hell=4
+deduce=4
+good\ separation\ of\ concerns\ (DDD)=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
 abstract\ class=4
+SLI=4
 non-semantic\ message=4
 SLO=4
 dispatcher=4
@@ -257,8 +253,10 @@ REST\ client-server\ constraint=4
 bounded=4
 throttling=4
 OpenShift=4
+polymorphism\ (OOP)=4
 volatile=4
 git\ stash=4
+container=4
 encapsulation=4
 JPA\ transaction\ (db)=4
 UI\ dialog=4
@@ -280,6 +278,7 @@ assess=4
 fetch=4
 servlet\ vs\ controller=4
 state\ (of\ object)=4
+constraint\ (general\ word)=4
 memoization=4
 POJO=4
 artifact\ (context\:\ compilation)=4
@@ -297,7 +296,7 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
-polymorphism\ (OOP)=4
+signatory=4
 URL\ safe\ format=5
 full-text\ search=5
 RESTful\ data\ formats=5
@@ -334,6 +333,7 @@ KPI=5
 cloud=5
 runtime=5
 Genesys\ Cloud=5
+Kafka\ vs\ Kubernetes=6
 container\ image=6
 bounded\ context=6
 good\ separation\ of\ concerns\ for\ DocManager=6
@@ -376,6 +376,7 @@ IoC=6
 TDM=6
 stereotype\ in\ Spring=6
 on-premises\ datacenter=6
+code\ integration=7
 RESTful\ layers=7
 greedy\ solution=8
 interface=8
