master: notes on topping up OpenAI API

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -38,3 +38,6 @@ how to:
     - then commit
   - tone down the definitions color in .concepts:
     - Settings > ... > File Types > "+" > in the "line comment" put "="
+
+top up openAI:
+  - https://platform.openai.com/settings/organization/billing/overview
