--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,5 +1,7 @@
-ORM=2
-PII=2
+ORM=1
+PII=1
+application\ server=2
+web\ container=2
 vague=3
 aspect\ oriented\ programming=3
 servlet=3
@@ -35,12 +37,10 @@ partition\ and\ sample=3
 Kerberos\ keytab=3
 exploratory\ testing=3
 data\ pseudonymization=3
-Logread=3
 landing\ page=3
-custody=3
+Logread=3
 value\ stream=3
 web\ portal=3
-stop\ word\ filtering=3
 data\ flow=3
 hash=3
 Kibana=3
@@ -88,18 +88,16 @@ hyphen\ ("-")\ function=3
 ICT\ system=3
 Hungarian\ pollution=3
 diamond\ operator\ (Java)=3
-container\ management\ platform=3
 Swagger=3
+container\ management\ platform=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-worker\ node=3
 whitelisting=3
+worker\ node=3
 pipeline\ (IT)=3
 DPIA=3
 JETTY=3
-distributed\ computing=3
-web\ container=3
 indegree=3
 bad\ cohesion\ (DDD)=3
 to\ prompt=3
@@ -145,11 +143,14 @@ HSM\ (device)=3
 JPA\ responsibilities\ (db)=3
 TDC=3
 VPN\ whitelisting=3
-asynchronous=3
 object\ mapping\ (database)=3
+asynchronous=3
 DORA=3
 arbitrary=3
 hash\ use\ cases=3
+distributed\ computing=4
+stop\ word\ filtering=4
+custody=4
 uplink\ (networking)=4
 Docker=4
 AD=4
@@ -182,8 +183,8 @@ JSON=4
 Ivy=4
 dispose\ of\ a\ list=4
 VPN=4
-deduce=4
 jar\ hell=4
+deduce=4
 good\ separation\ of\ concerns\ (DDD)=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
