--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,5 +1,5 @@
 problems:
-
+  - let ai read requirements and formulate explicitly what is expected from the user
 ideas:
   - there could be extra note for key for the user before the answer
     - it should tell what is expected to be mentioned in the answer
