--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,5 +1,3 @@
-web\ container=3
-application\ server=3
 vague=3
 aspect\ oriented\ programming=3
 servlet=3
@@ -62,7 +60,6 @@ retrieve=3
 JPQL=3
 performance\ testing=3
 paradigm=3
-RESTful\ methods=3
 latency=3
 Elasticsearch=3
 OpenShift\ vs\ Kubernetes?=3
@@ -72,6 +69,7 @@ Hazelcast=3
 SSL=3
 Spring\ beans=3
 means\ of\ defensive\ programming=3
+application\ server=3
 CTO=3
 connection\ pool\ (context\:\ database)=3
 cluster=3
@@ -95,6 +93,7 @@ worker\ node=3
 pipeline\ (IT)=3
 DPIA=3
 JETTY=3
+web\ container=3
 indegree=3
 bad\ cohesion\ (DDD)=3
 to\ prompt=3
@@ -294,6 +293,7 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
+RESTful\ methods\ (mention\ all\ 4)=4
 URL\ safe\ format=5
 full-text\ search=5
 RESTful\ data\ formats=5
