--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,3 +1,5 @@
+DC\ components\ (infrastructure)=2
+operational\ risk=2
 vague=3
 aspect\ oriented\ programming=3
 servlet=3
@@ -23,18 +25,16 @@ XSS=3
 component\ scanning=3
 coupling\ (noun)\ (software)=3
 TLS=3
-signup\ raw\ data=3
 hub=3
 partition\ and\ sample=3
 exploratory\ testing=3
 data\ pseudonymization=3
-Logread=3
 landing\ page=3
+Logread=3
 value\ stream=3
 web\ portal=3
 data\ flow=3
 Kibana=3
-operational\ risk=3
 JPA\ entity\ management\ (db)=3
 PII=3
 framework=3
@@ -76,13 +76,13 @@ hyphen\ ("-")\ function=3
 ICT\ system=3
 Hungarian\ pollution=3
 diamond\ operator\ (Java)=3
-container\ management\ platform=3
 Swagger=3
+container\ management\ platform=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-worker\ node=3
 whitelisting=3
+worker\ node=3
 pipeline\ (IT)=3
 DPIA=3
 JETTY=3
@@ -132,8 +132,8 @@ HSM\ (device)=3
 JPA\ responsibilities\ (db)=3
 TDC=3
 VPN\ whitelisting=3
-asynchronous=3
 object\ mapping\ (database)=3
+asynchronous=3
 DORA=3
 arbitrary=3
 hash\ use\ cases=3
@@ -170,8 +170,8 @@ JSON=4
 Ivy=4
 dispose\ of\ a\ list=4
 VPN=4
-deduce=4
 jar\ hell=4
+deduce=4
 good\ separation\ of\ concerns\ (DDD)=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
@@ -289,6 +289,7 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
+DC\ (infrastructure)=4
 URL\ safe\ format=5
 .war\ file=5
 full-text\ search=5
@@ -370,6 +371,7 @@ IoC=6
 TDM=6
 stereotype\ in\ Spring=6
 on-premises\ datacenter=6
+signup\ raw\ data=7
 code\ integration=7
 hash=7
 semantic\ message=7
