--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,7 +1,7 @@
 TLS=2
 operational\ risk=2
-arbitrary=2
 asynchronous=2
+arbitrary=2
 vague=3
 servlet=3
 CI\ (IT\ component)=3
@@ -28,8 +28,8 @@ hub=3
 partition\ and\ sample=3
 exploratory\ testing=3
 data\ pseudonymization=3
-Logread=3
 landing\ page=3
+Logread=3
 value\ stream=3
 web\ portal=3
 data\ flow=3
@@ -74,13 +74,13 @@ hyphen\ ("-")\ function=3
 ICT\ system=3
 Hungarian\ pollution=3
 diamond\ operator\ (Java)=3
-container\ management\ platform=3
 Swagger=3
+container\ management\ platform=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-worker\ node=3
 whitelisting=3
+worker\ node=3
 DPIA=3
 JETTY=3
 web\ container=3
@@ -132,7 +132,6 @@ object\ mapping\ (database)=3
 DORA=3
 hash\ use\ cases=3
 aspect\ oriented\ programming=4
-firewall\ opening=4
 uplink\ (networking)=4
 Docker=4
 AD=4
@@ -163,11 +162,10 @@ regression\ testing=4
 enterprise-level=4
 Kerberos\ ticket=4
 JSON=4
-Ivy=4
 dispose\ of\ a\ list=4
 VPN=4
-deduce=4
 jar\ hell=4
+deduce=4
 good\ separation\ of\ concerns\ (DDD)=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
@@ -239,6 +237,7 @@ distributed\ computing=4
 YAML=4
 REST\ client-server\ constraint=4
 bounded=4
+firewall\ opening=4
 DC\ components\ (infrastructure)=4
 throttling=4
 OpenShift=4
@@ -287,6 +286,8 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
+Apache\ Ivy=4
+npm=4
 URL\ safe\ format=5
 .war\ file=5
 full-text\ search=5
