master: added concepts

--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,7 +1,10 @@
-TLS=2
-operational\ risk=2
-asynchronous=2
-arbitrary=2
+TLS=1
+Apache\ Ant=2
+SO\ (role)=2
+UrbanCode\ Deploy\ (UCD)=2
+JFrog\ Artifactory=2
+PI\ (agile)=2
+failover=2
 vague=3
 servlet=3
 CI\ (IT\ component)=3
@@ -28,8 +31,8 @@ hub=3
 partition\ and\ sample=3
 exploratory\ testing=3
 data\ pseudonymization=3
-landing\ page=3
 Logread=3
+landing\ page=3
 value\ stream=3
 web\ portal=3
 data\ flow=3
@@ -74,19 +77,18 @@ hyphen\ ("-")\ function=3
 ICT\ system=3
 Hungarian\ pollution=3
 diamond\ operator\ (Java)=3
-Swagger=3
 container\ management\ platform=3
+Swagger=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-whitelisting=3
 worker\ node=3
+whitelisting=3
 DPIA=3
 JETTY=3
 web\ container=3
 indegree=3
 bad\ cohesion\ (DDD)=3
-to\ prompt=3
 integrated\ test\ environment=3
 connection\ protection\ (examples)=3
 factory\ pattern=3
@@ -95,7 +97,6 @@ feature\ flag=3
 garbage\ collection=3
 Ivy\ integration\ to\ Gradle=3
 JDBC=3
-defensive\ programming=3
 compatibility\ testing=3
 GCT=3
 gateway=3
@@ -130,8 +131,12 @@ TDC=3
 VPN\ whitelisting=3
 object\ mapping\ (database)=3
 DORA=3
+arbitrary=3
 hash\ use\ cases=3
+to\ prompt=4
+asynchronous=4
 aspect\ oriented\ programming=4
+SA\ (technical\ user)=4
 uplink\ (networking)=4
 Docker=4
 AD=4
@@ -164,8 +169,8 @@ Kerberos\ ticket=4
 JSON=4
 dispose\ of\ a\ list=4
 VPN=4
-jar\ hell=4
 deduce=4
+jar\ hell=4
 good\ separation\ of\ concerns\ (DDD)=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
@@ -178,6 +183,7 @@ custody=4
 thoroughness=4
 edge\ (graphs)=4
 stop\ word\ filtering=4
+operational\ risk=4
 URL=4
 RDBMS=4
 product\ backlog\ (agile)=4
@@ -220,6 +226,7 @@ tamper=4
 base\ (math)=4
 synchronous=4
 stakeholder=4
+Apache\ Ivy=4
 sticky\ session\ benefit=4
 jitter=4
 pod=4
@@ -243,6 +250,7 @@ throttling=4
 OpenShift=4
 polymorphism\ (OOP)=4
 volatile=4
+npm=4
 git\ stash=4
 container=4
 encapsulation=4
@@ -255,6 +263,7 @@ credential=4
 obfuscate\ data=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
 artifactory=4
+anonymous\ access\ to\ Artifactory=4
 Kafka=4
 UAT=4
 FDP=4
@@ -286,8 +295,8 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
-Apache\ Ivy=4
-npm=4
+PI\ (data)=4
+defensive\ programming=5
 URL\ safe\ format=5
 .war\ file=5
 full-text\ search=5
